# hwphelper

./: .env.example  .gitignore  CLAUDE.md  launcher.py  pyproject.toml
config/: format_rules.yaml  llm_config.yaml  prompt_templates.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: build.py  fill_complete.py  fill_startup_form.py  fill_test.py  fix_budget_tables.py  fix_team_section.py  patch_pyhwpx.py  quick_fill.py  rebuild_from_original.py  setup_check.py  test_autofill.py
src/: cli.py  mcp_server.py  server.py
src/ai/: __init__.py  cell_generator.py  chat_agent.py  image_generator.py  llm_router.py  prompt_builder.py  rag_engine.py  tool_definitions.py  vision_reader.py  vision_reconciler.py  write_verifier.py
src/api/: __init__.py  routes.py  schemas.py  websocket_handler.py
src/hwp_engine/: __init__.py  cell_classifier.py  cell_writer.py  com_controller.py  document_manager.py  field_manager.py  hwpx_fallback.py  page_renderer.py  schema_generator.py  table_reader.py  template_filler.py
src/utils/: debug_utils.py
src/validator/: __init__.py  (+1 more)
tests/: conftest.py  test_api.py  test_cell_classifier.py  test_cell_generator.py  test_cell_writer.py  test_chat_agent.py  test_cli.py  test_com_controller.py  test_debug_utils.py  test_document_manager.py  test_field_manager.py  test_format_checker.py  test_integration.py  test_llm_router.py  test_mcp_server.py  test_prompt_builder.py  test_rag_engine.py  test_schema_generator.py  test_table_reader.py  test_tool_definitions.py
(+13 files in other folders)
